regionB/10.lb_probe.tf
resource "azurerm_lb_probe" "user30-lb-probe" {
    resource_group_name	= azurerm_resource_group.user30-rg2.name
    loadbalancer_id 	= azurerm_lb.user30-lb.id
    name 		        = "http-probe"
    protocol 		    = "Http"
    request_path 	    = "/"
    port 		        = 80
}
